--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 header {
     padding: 20px 35px;
+    background-color: peachpuff;
 }
 header h1 {
     font-weight: bold;
@@ -17,9 +18,9 @@ header a {
 }
 header nav {
     float: right;
-    font-size: 20px;
-    font-family:Arial, Helvetica, sans-serif;
 }
 header nav ul li {
     display: inline;
+    font-size: 25px;
+    font-family:Arial, Helvetica, sans-serif;
 }
