--- a/style.css
+++ b/style.css
@@ -6,98 +6,120 @@
 :root{
     --ff-primary: Arial, Helvetica, sans-serif;
     --primary-color:#ffffff;
-    --secondary-color: #000000;
-    --third--color: lavender;
+    --secondary-color: #686de0;
+    --third--color:#ffbe76;
 }
 /* BODY */
 body {
     background-color:var(--primary-color);
     font-family: var(--ff-primary);
     line-height: 1;
+    color: var(--secondary-color);
 }
 p {
     font-family: var(--ff-primary);
-    font-size: 3vw;
+    font-size: 4vw;
+    line-height: 1.5;
 }
 a {
-    font-size: 3vw;
+    line-height: 1.5;
 }
 
 /* HEADER BEGINS */
-.header {
-    padding: 20px 10px;
+header {
+    padding: 40px 40px;
     background-color:var(--third--color);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: sticky;
     width: 100%;
 }
-.header h1 {
+header h1 {
     font-weight: bold;
-    font-size: 8vw;
+    font-size: 4vw;
     margin: 0;
 }
-.header h2 {
-    position: relative;
+
+div {
+    padding:80px;
+    background-image: url("./images/laptop-unsplash.jpg");
+    background-size:cover;
+    background-attachment: static;
+    background-position: 50%;
+}
+div h2 {
     font-weight: lighter;
     font-size: 3vw;
+    padding-top: 30px;
+    float: right;
 }
-.header a {
+header a {
     text-decoration: none;
 }
-.header nav {
-    margin: 7px 0;
+header nav {
+    margin: 5px 0;
 }
-.header nav ul {
+header nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content:space-between;
-    align-items:flex-start;
+    align-items:center;
     list-style: none;
 }
-.header nav ul li a {
-    margin: 0 20px;
+header nav ul li a {
+    padding: 10px 10px;
     color: var(--secondary-color);
     font-size: 3vw;
 }
-.header nav ul li a:hover {
+header nav ul li a:hover {
     color: var(--primary-color);
 }
 /* HEADER ENDS */
 
-/* SECTION BEGINS */
-.section {
-    padding: 10px;
+section {
+    padding: 60px;
 }
 .section-title {
     text-align: center;
     font-size: 4vw;
     font-weight: bold;
     background-color:var(--third--color);
+    margin: 0 auto;
 }
-.img {
+img {
     max-width: 100%;
     height: auto;
 }
+
+/* ABOUT ME BEGINS */
 .intro {
-    padding: 10px;
-    margin: 10px;
-    border: 1px solid var(--secondary-color);
+    width: 100%;
+    margin: 0 auto;
+    font-size: 3vw;
     text-align: center;
 }
+/* ABOUT ME ENDS */
 
 /* WORK BEGINS */
 .work {
     padding: 10px;
     margin: 10px;
-    border: 1px solid var(--secondary-color);
+    border: 5px solid var(--secondary-color);
     text-align: center;
-    
+    background-color: var(--third--color);
+    line-height: 1.5;
 }
 .projects {
     text-align: center;
     font-size: 3vw;
-    font-weight: lighter;
+    font-weight:bold;
+}
+.projects-column {
+    padding: 20px;
+    columns: 10px 2;
+    background-image: none;
+    width: 100%;
 }
 /* WORK ENDS */
 
@@ -105,15 +127,14 @@ a {
 .contact {
     padding: 10px;
     margin: 10px;
-    border: 1px solid var(--secondary-color);
     text-align: center;
+    font-size: 2vw;
 }
 .contact-list {
     list-style: none;
-
 }
 .contact a {
-    font-size: medium;
+    font-size: 2vw;
 }
 /*CONTACT ENDS*/
 
@@ -127,10 +148,15 @@ footer {
 }
 .footer p {
     text-align: center;
+    font-size: 20px;
 }
 /* FOOTER ENDS*/
 @media (hover: hover) {
     img:hover{
         opacity: 50%;
     }
+}
+footer p {
+    text-align: center;
+    width: 100%;
 }
