add README file

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ a {
 
 /* HEADER BEGINS */
 header {
-    padding: 40px 40px;
+    padding: 20px 20px;
     background-color:var(--third--color);
     display: flex;
     justify-content: space-between;
@@ -40,18 +40,17 @@ header h1 {
     font-size: 4vw;
     margin: 0;
 }
-
-div {
-    padding:80px;
+.subheader {
+    padding:80px 20px;
     background-image: url("./images/laptop-unsplash.jpg");
-    background-size:cover;
-    background-attachment: static;
-    background-position: 50%;
+    background-size: cover;
+    background-position:50%;
+    position: sticky;
 }
 div h2 {
     font-weight: lighter;
     font-size: 3vw;
-    padding-top: 30px;
+    padding-top: 20px;
     float: right;
 }
 header a {
@@ -78,7 +77,7 @@ header nav ul li a:hover {
 /* HEADER ENDS */
 
 section {
-    padding: 60px;
+    padding: 50px;
 }
 .section-title {
     text-align: center;
@@ -94,10 +93,30 @@ img {
 
 /* ABOUT ME BEGINS */
 .intro {
-    width: 100%;
-    margin: 0 auto;
+    padding: 30px;
+    margin: 30px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+.intro-section-title {
+    font-size: 5vw;
+    font-weight: bold;
+    text-decoration: underline;
+    text-align: center;
+}
+.intro-par {
+    width: 50%;
+    padding: 10px;
     font-size: 3vw;
     text-align: center;
+}
+.intro-image {
+    display: flex;
+    padding: 10px;
+    max-width: 100%;
+    height: auto;
+    
 }
 /* ABOUT ME ENDS */
 
@@ -118,7 +137,6 @@ img {
 .projects-column {
     padding: 20px;
     columns: 10px 2;
-    background-image: none;
     width: 100%;
 }
 /* WORK ENDS */
