--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 :root{
-    --ff-primary: Arial, Helvetica, sans-serif;
-    --primary-color:#ffffff;
+    --primary-color: 
     --secondary-color: #686de0;
     --third--color:#ffbe76;
 }
@@ -41,11 +41,9 @@ header h1 {
     margin: 0;
 }
 .subheader {
-    padding:100px;
     background-image: url("./images/laptop-unsplash.jpg");
     background-size: cover;
-    background-position:50%;
-    position: sticky;
+    background-position: center;
 }
 div h2 {
     font-weight: lighter;
@@ -109,13 +107,7 @@ img {
     width: 50%;
     padding: 10px;
     font-size: 3vw;
-    text-align: center;
-}
-.intro-image {
-    padding: 10px;
-    max-width: 100%;
-    height: auto;
-    
+    text-align: center; 
 }
 /* ABOUT ME ENDS */
 
