--- a/style.css
+++ b/style.css
@@ -88,12 +88,12 @@ img {
     flex-direction: row;
     flex-wrap: nowrap;
 }
-.intro-section-title {
+/* .intro-section-title {
     font-size: 5vw;
     font-weight: bold;
     text-decoration: underline;
     text-align: center;
-}
+} */
 .intro-par {
     width: 50%;
     padding: 10px;
@@ -116,7 +116,7 @@ img {
 }
 .projects-column {
     padding: 20px;
-    columns: 5px 2;
+    columns: 2;
     width: 100%;
 }
 /* WORK ENDS */
